# themenbaumgeneratorapi-fix-070825

./: CHANGELOG.md  README.md  main.py  pyproject.toml
src/: prompts.py  structured_text_helper.py  text_statistics_helper.py  vocab_helper.py
src/DTOs/: description_request.py  enhanced_response.py  ping.py  properties.py  topic_tree.py  topic_tree_request.py
