[project]
name = "topic-tree-generator"
version = "1.2.5"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "backoff>=2.2.1",
    "fastapi[standard]>=0.116.1",
    "loguru>=0.7.3",
    "openai>=1.99.9",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "rdflib>=7.1.4",
    "requests>=2.32.4",
    "ruff>=0.12.8",
]

[tool.ruff]
line-length = 120
